jQuery Clone/src/objects/Package__c.object
<CustomObject>
    <description>A Package is a collection of Provisions</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Policy_Holder__c</fullName>
        <label>Policy Holder</label>
        <picklist>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>Select the segment of business this package relates to</inlineHelpText>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>VB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simply Unum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trust_Type__c</fullName>
        <label>Trust Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Trust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>